--- a/critspecies.html
+++ b/critspecies.html
@@ -26,23 +26,23 @@
 	<main id="main">
         <div class ="gallery_animals">
         
-            <img src = "images/indiana-bat-myotis-sodalis.jpg" alt = "Cliff Lampe">
-            <img src = "images/eastern_massasauga.jpg" alt = "Serious Cliff">
-            <img src = "images/Mitchell's_Satyr.jpg" alt = "More Cliff">
-            <img src = "images/poweshiek-skipperling.jpg" alt = "Rick Rolled">
-            <img src = "images/american_burying_beetle.jpg" alt = "Cliff wearing a tie!">
-            <img src = "images/snuffbox.jpg" alt = "Younger Cliff">
-            <img src = "images/smallbox_salamandar.jpg" alt = "UMSI Academic Dean">
-            <img src = "images/kirtland's_snake.jpg" alt="Rick Astley2">
-            <img src = "images/copper-bellied_water_snake.jpg" alt="Rick Astley2">
+            <img src = "images/indiana-bat-myotis-sodalis.jpg" alt = "Indiana Bat">
+            <img src = "images/eastern_massasauga.jpg" alt = "Eastern Massasauga">
+            <img src = "images/Mitchell's_Satyr.jpg" alt = "Mitchell's Satyr">
+            <img src = "images/poweshiek-skipperling.jpg" alt = "Poweshiek Skipperling">
+            <img src = "images/american_burying_beetle.jpg" alt = "American Burying Beetle">
+            <img src = "images/snuffbox.jpg" alt = "Snuffbox">
+            <img src = "images/smallbox_salamandar.jpg" alt = "Smallmouth Salamandar">
+            <img src = "images/kirtland's_snake.jpg" alt="Kirtland's Snake">
+            <img src = "images/copper-bellied_water_snake.jpg" alt="Copper-bellied Water Snake">
         </div>
 
         <!-- in washtenaw county -->
-        <h2>Indiana bat</h2>
-        <h2>Eastern massasauga</h2>
-        <h2>Mitchell's satyr</h2>
-        <h2>Poweshiek skipperling</h2>
-        <h2>American burying beetle</h2>
+        <h2>Indiana Bat</h2>
+        <h2>Eastern Massasauga</h2>
+        <h2>Mitchell's Satyr</h2>
+        <h2>Poweshiek Skipperling</h2>
+        <h2>American Burying Beetle</h2>
         <h2>Snuffbox</h2>
         <h2>Smallmouth Salamandar</h2>
         <h2>Kirtland's Snake</h2>
