add styling for images

--- a/causes.html
+++ b/causes.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Link to the favicon image -->
 	<link rel="stylesheet" href="css/html5reset.css">
+	<link rel="stylesheet" type="text/css" href="css/stylecauses.css">
 	<title>Endangered Animals</title>
 </head>
 
@@ -25,7 +26,6 @@
 
 	<main id="main">
         <div class ="gallery_causes">
-        
             <img src = "images/agriculture.jpg" alt = "Cliff Lampe">
             <img src = "images/diseases.jpg" alt = "Serious Cliff">
             <img src = "images/habitat_change_temp.jpg" alt = "More Cliff">
