--- a/critspecies.html
+++ b/critspecies.html
@@ -5,7 +5,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Link to the favicon image -->
-	<link rel="stylesheet" href="css/html5reset.css">
+	<link rel="stylesheet" type="text/css" href="css/html5reset.css">
+    <link rel="stylesheet" type="text/css" href="css/stylecrit.css">
 	<title>Endangered Animals</title>
 </head>
 
@@ -27,7 +28,7 @@
         <div class ="gallery_animals">
         
             <img src = "images/indiana-bat-myotis-sodalis.jpg" alt = "Indiana Bat">
-            <img src = "images/eastern_massasauga.jpg" alt = "Eastern Massasauga">
+            <img src = "images/eastern_massuaga.jpg" alt = "Eastern Massasauga">
             <img src = "images/Mitchell's_Satyr.jpg" alt = "Mitchell's Satyr">
             <img src = "images/poweshiek-skipperling.jpg" alt = "Poweshiek Skipperling">
             <img src = "images/american_burying_beetle.jpg" alt = "American Burying Beetle">
