trying to style nav of page it is on

--- a/causes.html
+++ b/causes.html
@@ -7,6 +7,7 @@
 	<!-- Link to the favicon image -->
 	<link rel="stylesheet" href="css/html5reset.css">
 	<link rel="stylesheet" type="text/css" href="css/stylecauses.css">
+	<link rel="stylesheet" type = "text/css" href="css/style.css">
 	<title>Endangered Animals</title>
 </head>
 
@@ -15,9 +16,8 @@
 		<nav>
 			<ul>
 				<li><a href = "index.html" >Endangered Animals</a></li>
-				<li><a href = "critspecies.html">Critical Endangered Species</a></li>
+				<li><a href = "critspecies.html">Critically Endangered Species</a></li>
 				<li class="active"><a href = "causes.html">Causes of Extinction</a></li>
-				<li><a href = "help.html">Ways to Help</a></li>
 			</ul>
 		</nav>
 		<h1>Critically Endangered Species</h1>
