--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Link to the favicon image -->
-	<link rel="stylesheet" href="css/html5reset.css">
+	<link rel="stylesheet" type = "text/css" href="css/html5reset.css">
+	<link rel="stylesheet" type = "text/css" href="css/style.css">
 	<title>Endangered Animals</title>
 </head>
 
@@ -16,7 +17,6 @@
 				<li class="active"><a href = "index.html" >Endangered Animals</a></li>
 				<li><a href = "critspecies.html">Critically Endangered Species</a></li>
 				<li><a href = "causes.html">Causes of Extinction</a></li>
-				<li><a href = "help.html">Ways to Help</a></li>
 			</ul>
 		</nav>
 		<h1>The Sixth Extinction</h1>
@@ -29,10 +29,6 @@
 
 		<!-- Make sure your anchor tags have a link (href) and a clickable component -->
 		<p>This page is focused primarily on ways that we can help the environment around us. I will focus on the Michigan environment and how we can protect and sustain the animals in the area particularly around Ann Arbor.</p>
-		<p>My previous jobs include Associate Professor at 
-			<a href = "http://www.csulb.edu">California State University</a> 
-			and positions at NASA JPL, the Naval Research Lab, and the NSA. 
-		</p>
 	</main>
 
 	<!-- Footer is a sematic tag page that aids readability -->
