diff look for nav on the page ur on

--- a/critspecies.html
+++ b/critspecies.html
@@ -16,7 +16,7 @@
 		<nav>
 			<ul>
 				<li><a href = "index.html" >Endangered Animals</a></li>
-				<li class="active"><a href = "critspecies.html">Critically Endangered Species</a></li>
+				<li><a href = "critspecies.html" class="active">Critically Endangered Species</a></li>
 				<li><a href = "causes.html">Causes of Extinction</a></li>
 			</ul>
 		</nav>
