--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<header>
 		<nav>
 			<ul>
-				<li class="active"><a href = "index.html" >Endangered Animals</a></li>
+				<li><a href = "index.html" class="active">Endangered Animals</a></li>
 				<li><a href = "critspecies.html">Critically Endangered Species</a></li>
 				<li><a href = "causes.html">Causes of Extinction</a></li>
 			</ul>
@@ -25,10 +25,19 @@
 
 	<!-- Every page should have a main tag for accessibility -->
 	<main id="main">
-		<p>My name is Dylan Hong, and I have always cared deeply about animals and the environment. In particular, I have always had a deep love for the animals that humanity has pushed the closest to extinction. What I've always been interested in is the ways to conserve and protect these animals at the brink of extinction. This site is designed to bring awareness to animals at extinctions gate, their story and the ways in which we can help.</p>
+		<p>My name is Dylan Hong, and I have always cared deeply about animals
+			and the environment. In particular, I have always had a deep love
+			for the animals that humanity has pushed the closest to extinction.
+			What I've always been interested in is the ways to conserve and
+			protect these animals at the brink of extinction. This site is
+			designed to bring awareness to animals at extinctions gate, their
+			story and the ways in which we can help.</p>
 
 		<!-- Make sure your anchor tags have a link (href) and a clickable component -->
-		<p>This page is focused primarily on ways that we can help the environment around us. I will focus on the Michigan environment and how we can protect and sustain the animals in the area particularly around Ann Arbor.</p>
+		<p>This page is focused primarily on ways that we can help the
+			environment around us. I will focus on the Michigan environment and
+			how we can protect and sustain the animals in the area particularly
+			around Ann Arbor.</p>
 	</main>
 
 	<!-- Footer is a sematic tag page that aids readability -->
