--- a/causes.html
+++ b/causes.html
@@ -17,7 +17,7 @@
 			<ul>
 				<li><a href = "index.html" >Endangered Animals</a></li>
 				<li><a href = "critspecies.html">Critically Endangered Species</a></li>
-				<li class="active"><a href = "causes.html">Causes of Extinction</a></li>
+				<li><a href = "causes.html" class="active">Causes of Extinction</a></li>
 			</ul>
 		</nav>
 		<h1>Critically Endangered Species</h1>
