broken javascript for skip to content

--- a/critspecies.html
+++ b/critspecies.html
@@ -21,7 +21,7 @@
 			</ul>
 		</nav>
 		<h1>Critically Endangered Species</h1>
-        <a href="#main" class="skip">Skip to main content</a>
+        <a href="#main" id="skip" class="hidden" tabindex="0">Skip to main content</a>
 	</header>
 
 	<main id="main">
@@ -53,5 +53,7 @@
 	<footer>
 		<p>Dylan Hong</p>
 	</footer>
+
+    <script type="text/javascript" src="js/universal.js"></script>
 </body>
 </html>
