--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			</ul>
 		</nav>
 		<h1>The Sixth Extinction</h1>
-        <a href="#main" class="skip">Skip to main content</a>
+        <a href="#main" id="skip" class="hidden" tabindex="0">Skip to main content</a>
 	</header>
 
 	<!-- Every page should have a main tag for accessibility -->
@@ -44,5 +44,7 @@
 	<footer>
 		<p>Dylan Hong</p>
 	</footer>
+
+	<script type="text/javascript" src="js/universal.js"></script>
 </body>
 </html>
