first tab now shows skip to content

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 </head>
 
 <body>
-	<header>
+	<header class="outer">
 		<nav>
 			<ul>
-				<li><a href = "index.html" class="active">Endangered Animals</a></li>
-				<li><a href = "critspecies.html">Critically Endangered Species</a></li>
-				<li><a href = "causes.html">Causes of Extinction</a></li>
+				<li><a href = "index.html" id="first" class="active" tabindex="-1">Endangered Animals</a></li>
+				<li><a href = "critspecies.html" tabindex="-1">Critically Endangered Species</a></li>
+				<li><a href = "causes.html" tabindex="-1">Causes of Extinction</a></li>
 			</ul>
 		</nav>
 		<h1>The Sixth Extinction</h1>
-        <a href="#main" id="skip" class="hidden" tabindex="0">Skip to main content</a>
+        <a href="#main" class="skip">Skip to main content</a>
 	</header>
 
 	<!-- Every page should have a main tag for accessibility -->
@@ -45,6 +45,6 @@
 		<p>Dylan Hong</p>
 	</footer>
 
-	<script type="text/javascript" src="js/universal.js"></script>
+	<!-- <script type="text/javascript" src="js/universal.js"></script> -->
 </body>
 </html>
