--- a/causes.html
+++ b/causes.html
@@ -15,13 +15,13 @@
 	<header>
 		<nav>
 			<ul>
-				<li><a href = "index.html" >Endangered Animals</a></li>
-				<li><a href = "critspecies.html">Critically Endangered Species</a></li>
-				<li><a href = "causes.html" class="active">Causes of Extinction</a></li>
+				<li><a href = "index.html" id="first" tabindex="-1">Endangered Animals</a></li>
+				<li><a href = "critspecies.html" tabindex="-1">Critically Endangered Species</a></li>
+				<li><a href = "causes.html" class="active" tabindex="-1">Causes of Extinction</a></li>
 			</ul>
 		</nav>
 		<h1>Critically Endangered Species</h1>
-        <a href="#main" id="skip" class="hidden" tabindex="0">Skip to main content</a>
+        <a href="#main" class="skip">Skip to main content</a>
 	</header>
 
 	<main id="main">
@@ -42,6 +42,6 @@
 		<p>Dylan Hong</p>
 	</footer>
 
-	<script type="text/javascript" src="js/universal.js"></script>
+	<!-- <script type="text/javascript" src="js/universal.js"></script> -->
 </body>
 </html>
