--- a/causes.html
+++ b/causes.html
@@ -14,7 +14,7 @@
 <body>
 	<header>
 		<nav>
-			<ul>
+			<ul class="nav">
 				<li><a href = "index.html" id="first" tabindex="-1">Endangered Animals</a></li>
 				<li><a href = "critspecies.html" tabindex="-1">Critically Endangered Species</a></li>
 				<li><a href = "causes.html" class="active" tabindex="-1">Causes of Extinction</a></li>
