--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 	<header class="outer">
 		<nav>
-			<ul>
+			<ul class="nav">
 				<li><a href = "index.html" id="first" class="active" tabindex="-1">Endangered Animals</a></li>
 				<li><a href = "critspecies.html" tabindex="-1">Critically Endangered Species</a></li>
 				<li><a href = "causes.html" tabindex="-1">Causes of Extinction</a></li>
