--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-	<header class="outer">
+	<header class="header">
 		<nav>
 			<ul class="nav">
 				<li><a href = "index.html" id="first" class="active" tabindex="-1">Endangered Animals</a></li>
@@ -19,12 +19,12 @@
 				<li><a href = "causes.html" tabindex="-1">Causes of Extinction</a></li>
 			</ul>
 		</nav>
-		<h1>The Sixth Extinction</h1>
         <a href="#main" class="skip">Skip to main content</a>
 	</header>
 
 	<!-- Every page should have a main tag for accessibility -->
 	<main id="main">
+		<h1>The Sixth Extinction</h1>
 		<p>My name is Dylan Hong, and I have always cared deeply about animals
 			and the environment. In particular, I have always had a deep love
 			for the animals that humanity has pushed the closest to extinction.
