--- a/causes.html
+++ b/causes.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-	<header>
+	<header class="header">
 		<nav>
 			<ul class="nav">
 				<li><a href = "index.html" id="first" tabindex="-1">Endangered Animals</a></li>
@@ -20,11 +20,11 @@
 				<li><a href = "causes.html" class="active" tabindex="-1">Causes of Extinction</a></li>
 			</ul>
 		</nav>
-		<h1>Critically Endangered Species</h1>
         <a href="#main" class="skip">Skip to main content</a>
 	</header>
 
 	<main id="main">
+		<h1>Critically Endangered Species</h1>
         <div class ="gallery_causes">
             <img src = "images/agriculture.jpg" alt = "Cliff Lampe">
             <img src = "images/diseases.jpg" alt = "Serious Cliff">
