more stuff before i change the headers in crit

--- a/causes.html
+++ b/causes.html
@@ -26,15 +26,41 @@
 	<main id="main">
 		<h1>Critically Endangered Species</h1>
         <div class ="gallery_causes">
-            <img src = "images/agriculture.jpg" alt = "Cliff Lampe">
-            <img src = "images/diseases.jpg" alt = "Serious Cliff">
-            <img src = "images/habitat_change_temp.jpg" alt = "More Cliff">
-            <img src = "images/habitat_loss.jpg" alt = "Rick Rolled">
-            <img src = "images/invasive_species.jpg" alt = "Cliff wearing a tie!">
-            <img src = "images/overhunting.jpg" alt = "Younger Cliff">
-            <img src = "images/pesticides.jpg" alt = "UMSI Academic Dean">
-            <img src = "images/pollution.jpg" alt="Rick Astley2">
-            <img src = "images/urbanization.jpg" alt="Rick Astley2">
+            <figure><img src = "images/agriculture.jpg" alt = "Agriculture">
+				<figcaption>Agriculture</figcaption>
+            </figure>
+
+            <figure><img src = "images/diseases.jpg" alt = "Diseases">
+				<figcaption>Diseases</figcaption>
+            </figure>
+
+            <figure><img src = "images/habitat_change_temp.jpg" alt = "Habitat Changing Temperatures">
+				<figcaption>Habitat Changing Temperatures</figcaption>
+            </figure>
+
+            <figure><img src = "images/habitat_loss.jpg" alt = "Habitat Loss">
+				<figcaption>Habitat Loss</figcaption>
+            </figure>
+
+            <figure><img src = "images/invasive_species.jpg" alt = "Invasive Species">
+				<figcaption>Invasive Species</figcaption>
+            </figure>
+
+            <figure><img src = "images/overhunting.jpg" alt = "Overhunting">
+				<figcaption>Overhunting</figcaption>
+            </figure>
+
+            <figure><img src = "images/pesticides.jpg" alt = "Pesticides">
+				<figcaption>Pesticides</figcaption>
+            </figure>
+
+            <figure><img src = "images/pollution.jpg" alt="Pollution">
+				<figcaption>Pollution</figcaption>
+            </figure>
+
+            <figure><img src = "images/urbanization.jpg" alt="Urbanization">
+				<figcaption>Urbanization</figcaption>
+            </figure>
         </div>
 	</main>
 
