--- a/critspecies.html
+++ b/critspecies.html
@@ -27,27 +27,142 @@
 		<h1>Critically Endangered Species</h1>
         <div class ="gallery_animals">
         
-            <img src = "images/indiana-bat-myotis-sodalis.jpg" alt = "Indiana Bat">
-            <img src = "images/eastern_massuaga.jpg" alt = "Eastern Massasauga">
-            <img src = "images/Mitchell's_Satyr.jpg" alt = "Mitchell's Satyr">
-            <img src = "images/poweshiek-skipperling.jpg" alt = "Poweshiek Skipperling">
-            <img src = "images/american_burying_beetle.jpg" alt = "American Burying Beetle">
-            <img src = "images/snuffbox.jpg" alt = "Snuffbox">
-            <img src = "images/smallbox_salamandar.jpg" alt = "Smallmouth Salamandar">
-            <img src = "images/kirtland's_snake.jpg" alt="Kirtland's Snake">
-            <img src = "images/copper-bellied_water_snake.jpg" alt="Copper-bellied Water Snake">
-        </div>
+            <figure><img src = "images/indiana-bat-myotis-sodalis.jpg" alt = "Indiana Bat">
+                <figcaption><a href="#indiana">Indiana Bat</a></figcaption>
+            </figure>
 
+            <figure><img src = "images/eastern_massuaga.jpg" alt = "Eastern Massasauga">
+                <figcaption><a href="#eastern">Eastern Massasauga</a></figcaption>
+            </figure>
+
+            <figure><img src = "images/Mitchell's_Satyr.jpg" alt = "Mitchell's Satyr">
+                <figcaption><a href="#mitchell's">Mitchell's Satyr</a></figcaption>
+            </figure>
+
+            <figure><img src = "images/poweshiek-skipperling.jpg" alt = "Poweshiek Skipperling">
+                <figcaption><a href="#poweshiek">Poweshiek Skipperling</a></figcaption>
+            </figure>
+
+            <figure><img src = "images/american_burying_beetle.jpg" alt = "American Burying Beetle">
+                <figcaption><a href="#american">American Burying Beetle</a></figcaption>
+            </figure>
+
+            <figure><img src = "images/snuffbox.jpg" alt = "Snuffbox">
+                <figcaption><a href="#snuffbox">Snuffbox</a></figcaption>
+            </figure>
+
+            <figure><img src = "images/smallbox_salamandar.jpg" alt = "Smallmouth Salamandar">
+                <figcaption><a href="#smallmouth">Smallmouth Salamandar</a></figcaption>
+            </figure>
+
+            <figure><img src = "images/kirtland's_snake.jpg" alt="Kirtland's Snake">
+                <figcaption><a href="#kirtland's">Kirtland's Snake</a></figcaption>
+            </figure>
+
+            <figure><img src = "images/copper-bellied_water_snake.jpg" alt="Copper-bellied Water Snake">
+                <figcaption><a href="#copper">Copper-bellied Water Snake</a></figcaption>
+            </figure>
+
+        </div>
         <!-- in washtenaw county -->
-        <h2>Indiana Bat</h2>
-        <h2>Eastern Massasauga</h2>
-        <h2>Mitchell's Satyr</h2>
-        <h2>Poweshiek Skipperling</h2>
-        <h2>American Burying Beetle</h2>
-        <h2>Snuffbox</h2>
-        <h2>Smallmouth Salamandar</h2>
-        <h2>Kirtland's Snake</h2>
-        <h2>Copper-bellied Water Snake</h2>
+        <div class="info">
+            <h2 id="indiana">Indiana Bat</h2>
+
+            <h3>Background Information</h3>
+            <p>The indiana bat is a small, insectivorous, migratory bat. It
+                hibernates in caves and mines in the winter. Up to 500 bats will
+                hibernate per square foot in the caves. They require forest to
+                forage and roosting.</p>
+
+            <h3>Endangered Status</h3>
+            <p>The species was originally listed as in danger of extinction in 1966.
+                It is currently still listed.</p>
+
+            <h2 id="eastern">Eastern Massasauga</h2>
+
+            <h3>Background Information</h3>
+            <p>The eastern massasauga rattlesnake is a small pit viper that occurs
+                in the northern midwest United States and Ontario, Canada.</p>
+
+            <h3>Endangered Status</h3>
+            <p>The species were listed as threatened under the Endangered Species
+                Act in 2016. This was due primarily to habitat loss.</p>
+
+            <h2 id="mitchell's">Mitchell's Satyr</h2>
+
+            <h3>Background Information</h3>
+            <p>Mitchell's Satyr is a small, brown butterfly that lives in prairie
+                fen habitats.</p>
+
+            <h3>Endangered Status</h3>
+            <p>The decline of the species is caused by changes in habitat and
+                hydrology. The suppression of natural disturbance events that are
+                important to the fen habitat have also been detrimental.</p>
+
+            <h2 id="poweshiek">Poweshiek Skipperling</h2>
+
+            <h3>Background Information</h3>
+            <p>The poweshiek skipperling is one of seven butterfly species in the
+                genus Oarisma. They are small butterflies that were once found in
+                native prairie in the United States. It has been killed out in a
+                lot of the states. The only states it is left in is Michigan,
+                manitoba, and maybe in Wisconsin.</p>
+
+            <h3>Endangered Status</h3>
+            <p>It was listed as federally endangered in 2014 and critical habitat
+                was designated in 2015. There a conservation movements to protect.</p>
+
+            <h2 id="american">American Burying Beetle</h2>
+
+            <h3>Background Information</h3>
+            <p>The american burying beetle is the largest carrion beetle in
+                North America. This species reaches 1 to 1.8 inches in length.</p>
+
+            <h3>Endangered Status</h3>
+            <p>Risks such as habitat loss or alteration and artificial lights
+                affect most populations. All remaining populations have some risks
+                associated with areas of urban or suburban development.</p>
+
+            <h2 id="snuffbox">Snuffbox</h2>
+
+            <h3>Background Information</h3>
+            <p>The snuffbox is a small to medium sized mussel.</p>
+
+            <h3>Endangered Status</h3>
+            <p>The snuffbox is currently listed as endangered. It currently resides
+                in a bunch of different states.</p>
+
+            <h2 id="smallmouth">Smallmouth Salamandar</h2>
+
+            <h3>Background Information</h3>
+            <p>The small-mouth salamander is a species of mole salamandar found
+                currently in central United States. It lives in moist pine
+                woodlands and deciduous forest bottomlands, tallgrass prairies
+                and more.</p>
+
+            <h3>Endangered Status</h3>
+            <p>It is listed as endangered. It is is only known in Michigan
+                and on Pelee Island in Lake Erie.</p>
+
+            <h2 id="kirtland">Kirtland's Snake</h2>
+
+            <h3>Background Information</h3>
+            <p>The Kirtland's snake is a nonvenomous snake. It is a small and 
+                slender snake. Adults reach a total of 12-18 inches. It's habitats 
+                are forest, grassland, and wetlands, such as swamps and marshes.</p>
+
+            <h3>Endangered Status</h3>
+            <p>It is listed as endangered in Michigan.</p>
+
+            <h2 id="copper">Copper-bellied Water Snake</h2>
+
+            <h3>Background Information</h3>
+            <p>The Copper-bellied water snake is found in southern Michigan,
+                northern Indiana, and Ohio. It feeds primarily on amphigbians.</p>
+
+            <h3>Endangered Status</h3>
+            <p>They are currently listed as endangered in Michigan.</p>
+        </div>
 	</main>
 
 	<footer>
