--- a/critspecies.html
+++ b/critspecies.html
@@ -66,101 +66,69 @@
         </div>
         <!-- in washtenaw county -->
         <div class="info">
-            <h2 id="indiana">Indiana Bat</h2>
+            <h2>Animal</h2>
+            <h2>Background Information</h2>
+            <h2>Endangered Status</h2>
 
-            <h3>Background Information</h3>
+            <h3 id="indiana">Indiana Bat</h3>
             <p>The indiana bat is a small, insectivorous, migratory bat. It
                 hibernates in caves and mines in the winter. Up to 500 bats will
                 hibernate per square foot in the caves. They require forest to
                 forage and roosting.</p>
-
-            <h3>Endangered Status</h3>
             <p>The species was originally listed as in danger of extinction in 1966.
                 It is currently still listed.</p>
 
-            <h2 id="eastern">Eastern Massasauga</h2>
-
-            <h3>Background Information</h3>
+            <h3 id="eastern">Eastern Massasauga</h3>
             <p>The eastern massasauga rattlesnake is a small pit viper that occurs
                 in the northern midwest United States and Ontario, Canada.</p>
-
-            <h3>Endangered Status</h3>
             <p>The species were listed as threatened under the Endangered Species
                 Act in 2016. This was due primarily to habitat loss.</p>
 
-            <h2 id="mitchell's">Mitchell's Satyr</h2>
-
-            <h3>Background Information</h3>
+            <h3 id="mitchell's">Mitchell's Satyr</h3>
             <p>Mitchell's Satyr is a small, brown butterfly that lives in prairie
                 fen habitats.</p>
-
-            <h3>Endangered Status</h3>
             <p>The decline of the species is caused by changes in habitat and
                 hydrology. The suppression of natural disturbance events that are
                 important to the fen habitat have also been detrimental.</p>
 
-            <h2 id="poweshiek">Poweshiek Skipperling</h2>
-
-            <h3>Background Information</h3>
+            <h3 id="poweshiek">Poweshiek Skipperling</h3>
             <p>The poweshiek skipperling is one of seven butterfly species in the
                 genus Oarisma. They are small butterflies that were once found in
                 native prairie in the United States. It has been killed out in a
                 lot of the states. The only states it is left in is Michigan,
                 manitoba, and maybe in Wisconsin.</p>
-
-            <h3>Endangered Status</h3>
             <p>It was listed as federally endangered in 2014 and critical habitat
                 was designated in 2015. There a conservation movements to protect.</p>
 
-            <h2 id="american">American Burying Beetle</h2>
-
-            <h3>Background Information</h3>
+            <h3 id="american">American Burying Beetle</h3>
             <p>The american burying beetle is the largest carrion beetle in
                 North America. This species reaches 1 to 1.8 inches in length.</p>
-
-            <h3>Endangered Status</h3>
             <p>Risks such as habitat loss or alteration and artificial lights
                 affect most populations. All remaining populations have some risks
                 associated with areas of urban or suburban development.</p>
 
-            <h2 id="snuffbox">Snuffbox</h2>
-
-            <h3>Background Information</h3>
+            <h3 id="snuffbox">Snuffbox</h3>
             <p>The snuffbox is a small to medium sized mussel.</p>
-
-            <h3>Endangered Status</h3>
             <p>The snuffbox is currently listed as endangered. It currently resides
                 in a bunch of different states.</p>
 
-            <h2 id="smallmouth">Smallmouth Salamandar</h2>
-
-            <h3>Background Information</h3>
+            <h3 id="smallmouth">Smallmouth Salamandar</h3>
             <p>The small-mouth salamander is a species of mole salamandar found
                 currently in central United States. It lives in moist pine
                 woodlands and deciduous forest bottomlands, tallgrass prairies
                 and more.</p>
-
-            <h3>Endangered Status</h3>
             <p>It is listed as endangered. It is is only known in Michigan
                 and on Pelee Island in Lake Erie.</p>
 
-            <h2 id="kirtland">Kirtland's Snake</h2>
-
-            <h3>Background Information</h3>
+            <h3 id="kirtland">Kirtland's Snake</h3>
             <p>The Kirtland's snake is a nonvenomous snake. It is a small and 
                 slender snake. Adults reach a total of 12-18 inches. It's habitats 
                 are forest, grassland, and wetlands, such as swamps and marshes.</p>
-
-            <h3>Endangered Status</h3>
             <p>It is listed as endangered in Michigan.</p>
 
-            <h2 id="copper">Copper-bellied Water Snake</h2>
-
-            <h3>Background Information</h3>
+            <h3 id="copper">Copper-bellied Water Snake</h3>
             <p>The Copper-bellied water snake is found in southern Michigan,
                 northern Indiana, and Ohio. It feeds primarily on amphigbians.</p>
-
-            <h3>Endangered Status</h3>
             <p>They are currently listed as endangered in Michigan.</p>
         </div>
 	</main>
